@@ -35,6 +35,9 @@ Core and Builtins
 Library
 -------
 
+- Issue 5830:  The sched module no longer raises a TypeError when
+  prioritizing Events with the same time and priority.
+
 - Issue #1161031: fix readwrite select flag handling: POLLPRI now
   results in a handle_expt_event call, not handle_read_event, and POLLERR
   and POLLNVAL now call handle_close, not handle_expt_event.  Also,
